sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:35: error: 'while' expected but '}' found.
}
^